k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-feed
  namespace: feedreader
spec:
  selector:
    app: news-feed
  ports:
  - port: 80
